create services wallet

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-SERVICE_SOAP_URL = http://localhost:8000
+BASE_WSDL_WALLET = http://10.5.0.5:8080/api/soap.wsdl
