--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "codedredd/laravel-soap": "^3.0",
+        "irazasyed/larasupport": "^1.7",
         "laravel/lumen-framework": "^9.0"
     },
     "require-dev": {
