--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ LOG_SLACK_WEBHOOK_URL=
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-BASE_WSDL_WALLET = http://10.5.0.5:8080/api/soap.wsdl
+BASE_WSDL_WALLET = http://10.5.0.6:8080/api/wallet.wsdl
